--- a/app/index.html
+++ b/app/index.html
@@ -518,6 +518,7 @@
       </span>
     </div>
     <div class="travel__slider">
+      <!-- 1 -->
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__top" style="background-image: url(img/travel-bg.png);">
           <div class="travel-slider__subtitle">
@@ -601,7 +602,7 @@
           </a>
         </div>
       </div>
-            <!-- 3 -->
+      <!-- 3 -->
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__top" style="background-image: url(img/travel-bg2.png);">
           <div class="travel-slider__subtitle">
@@ -643,7 +644,7 @@
           </a>
         </div>
       </div>
-                  <!-- 4 -->
+      <!-- 4 -->
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__top" style="background-image: url(img/travel-bg3.png);">
           <div class="travel-slider__subtitle">
@@ -685,7 +686,7 @@
           </a>
         </div>
       </div>
-                  <!-- 5 -->
+       <!-- 5 -->
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__top" style="background-image: url(img/travel-bg4.png);">
           <div class="travel-slider__subtitle">
@@ -727,7 +728,7 @@
           </a>
         </div>
       </div>
-                  <!-- 6 -->
+      <!-- 6 -->
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__top" style="background-image: url(img/travel-bg5.png);">
           <div class="travel-slider__subtitle">
@@ -769,7 +770,7 @@
           </a>
         </div>
       </div>
-                  <!-- 7 -->
+      <!-- 7 -->
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__top" style="background-image: url(img/travel-bg6.png);">
           <div class="travel-slider__subtitle">
@@ -811,7 +812,7 @@
           </a>
         </div>
       </div>
-                  <!-- 8 -->
+      <!-- 8 -->
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__top" style="background-image: url(img/travel-bg7.png);">
           <div class="travel-slider__subtitle">
@@ -859,22 +860,67 @@
   <!-- Travel -->
 
   <!-- Relax -->
-  <section class="relax">
+  <section class="travel">
+    <div class="container">
     <div class="title">
       <span>
         Relaksacja
         <h3>Relaksacja</h3>
       </span>
     </div>
+    <div class="travel__slider">
+      <!-- 1 -->
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg.png);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- Relax -->
 
   <!-- Shop -->
-  <section class="shop">
+  <section class="travel">
     <div class="title">
       <span>
-        Sklep
-        <h3>Sklep</h3>
+        Relaksacja
+        <h3>Relaksacja</h3>
       </span>
     </div>
   </section>
